test/success/unit/_succ_type_basic_4.hs
main = do
       let x :: String
       print "hello"