test/fail/integration/_fail_grammar_let_stmts_1.hs
main = do
       let x; y :: Int
       print "hello"